--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootswatch CSS Theme: Sketchy -->
     <link rel="stylesheet" href="Assets/bootstrap.css">
     <link rel="stylesheet" href="Assets/style.css">
